# trusty-analyze

./: .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs
.claude-mpm/: WORKFLOW.md
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
crates/trusty-analyzer-core/: Cargo.toml
crates/trusty-analyzer-core/src/: client.rs  complexity.rs  complexity_ts.rs  concept_cluster.rs  facts.rs  integration_tests.rs  lib.rs  linker.rs  ner.rs  quality.rs  registry.rs  scip.rs  test_utils.rs
crates/trusty-analyzer-lang/: Cargo.toml
crates/trusty-analyzer-lang/src/: detection.rs  lang.rs  lib.rs
crates/trusty-analyzer-lang/src/adapters/: c.rs  cpp.rs  csharp.rs  go.rs  java.rs  javascript.rs  kotlin.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs  scala.rs  swift.rs  typescript.rs
crates/trusty-analyzer-mcp/: Cargo.toml
crates/trusty-analyzer-mcp/src/: lib.rs  sse.rs  stdio.rs
crates/trusty-analyzer-service/: Cargo.toml
crates/trusty-analyzer-service/src/: lib.rs  ui.rs
crates/trusty-analyzer-types/: Cargo.toml
crates/trusty-analyzer-types/src/: entity.rs  facts.rs
crates/trusty-common/: Cargo.toml
crates/trusty-common/src/: chunk.rs  complexity.rs  entity.rs  facts.rs  graph.rs  lib.rs
crates/trusty-embedder/: Cargo.toml
crates/trusty-embedder/src/: bow.rs  lib.rs  neural.rs
src/: main.rs
src/commands/: mod.rs  service.rs
src/core/: client.rs  complexity.rs  complexity_ts.rs  mod.rs  registry.rs
src/mcp/: mod.rs
src/service/: mod.rs  ui.rs
src/types/: entity.rs
ui/: index.html  package.json  vite.config.js
ui/src/: App.svelte
ui/src/lib/: api.js  state.svelte.js
ui/src/lib/components/: Sidebar.svelte  Topbar.svelte
ui/src/lib/styles/: global.css  tokens.css
ui/src/lib/views/: Complexity.svelte  Config.svelte  Dashboard.svelte  Facts.svelte  Indexes.svelte  Smells.svelte
