[workspace]
members = [
    "crates/trusty-analyzer-types",
    "crates/trusty-analyzer-core",
    "crates/trusty-analyzer-lang",
    "crates/trusty-embedder",
    "crates/trusty-analyzer-service",
    "crates/trusty-analyzer-mcp",
    ".",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/bobmatnyc/trusty-analyze"
homepage = "https://github.com/bobmatnyc/trusty-analyze"
readme = "README.md"
authors = ["Bob Matsuoka <bob@matsuoka.com>"]

# ── Shared trusty-* crates (from the trusty-common repo) ──────────────────
# Why: consolidates port-binding, daemon address files, OpenRouter client,
# and (optionally) the shared axum server middleware. Local checkouts are
# wired in via [patch.crates-io] below for development without round-trips
# through crates.io publishing.
#
# Note: the *local* `trusty-analyzer-types` crate (formerly named
# `trusty-common`) holds analyzer-specific types and is unrelated to the
# shared `trusty-common` crate published from the trusty-common repo.

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
clap = { version = "4", features = ["derive", "env"] }
colored = "2"
redb = "2.6"
dashmap = "5"
include_dir = "0.7"
mime_guess = "2"
open = "5"

# Shared trusty-* crates (published from the trusty-common repo).
#
# Note: this workspace contains a local crate at `crates/trusty-embedder/`
# whose package name is `trusty-analyzer-embedder` (the directory keeps its
# historical name; the package was renamed to avoid colliding with an
# unrelated `trusty-embedder` crate already on crates.io). All analyzer
# crates — including the binary — are published from this repo.
trusty-common = "0.1.2"
trusty-contracts = "0.1"

# Local development override: point at the sibling trusty-common checkout
# so changes there flow straight into this workspace without a publish cycle.
[patch.crates-io]
trusty-common = { path = "../trusty-common/crates/trusty-common" }
trusty-contracts = { path = "../trusty-common/crates/trusty-contracts" }

[package]
name = "trusty-analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
description = "Sidecar code-analysis daemon for trusty-search: complexity, smells, quality, facts"
keywords = ["code-analysis", "complexity", "code-smells", "mcp", "daemon"]
categories = ["development-tools", "command-line-utilities"]
build = "build.rs"

[[bin]]
name = "trusty-analyzer"
path = "src/main.rs"

[dependencies]
trusty-analyzer-types = { path = "crates/trusty-analyzer-types", version = "0.1.1" }
trusty-analyzer-core = { path = "crates/trusty-analyzer-core", version = "0.1.1" }
trusty-analyzer-service = { path = "crates/trusty-analyzer-service", version = "0.1.1" }
trusty-analyzer-mcp = { path = "crates/trusty-analyzer-mcp", version = "0.1.1" }
trusty-analyzer-embedder = { path = "crates/trusty-embedder", version = "0.1.1" }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
open = { workspace = true }
axum = { workspace = true }
