[package]
name        = "trusty-analyzer"
version     = "0.1.1"
edition     = "2021"
license     = "MIT"
repository  = "https://github.com/bobmatnyc/trusty-analyze"
homepage    = "https://github.com/bobmatnyc/trusty-analyze"
readme      = "README.md"
authors     = ["Bob Matsuoka <bob@matsuoka.com>"]
description = "Sidecar code-analysis daemon for trusty-search: complexity, smells, quality, facts"
keywords    = ["code-analysis", "complexity", "code-smells", "mcp", "daemon"]
categories  = ["development-tools", "command-line-utilities"]
build       = "build.rs"

[[bin]]
name = "trusty-analyzer"
path = "src/main.rs"

[lib]
name = "trusty_analyzer"
path = "src/lib.rs"

[dependencies]
tokio              = { version = "1",    features = ["full"] }
axum               = "0.8"
tower-http         = { version = "0.6",  features = ["cors", "trace", "compression-gzip"] }
reqwest            = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
futures-util       = "0.3"
serde              = { version = "1",    features = ["derive"] }
serde_json         = "1"
anyhow             = "1"
thiserror          = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono             = { version = "0.4",  features = ["serde"] }
async-trait        = "0.1"
clap               = { version = "4",    features = ["derive", "env"] }
colored            = "2"
dirs               = "5"
open               = "5"
redb               = "2.6"
dashmap            = "5"
include_dir        = "0.7"
mime_guess         = "2"
trusty-common      = { version = "0.1.2", features = ["axum-server"] }
trusty-symgraph    = "0.2.0"
tree-sitter            = "0.24"
tree-sitter-rust       = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python     = "0.23"
tree-sitter-java       = "0.23"
tree-sitter-go         = "0.23"
tree-sitter-ruby       = "0.23"
tree-sitter-php        = "0.23"
tree-sitter-c          = "0.23"
tree-sitter-cpp        = "0.23"
tree-sitter-c-sharp    = "=0.23.1"
tree-sitter-kotlin-ng  = "1.1"
tree-sitter-swift      = "=0.7.0"
tree-sitter-scala      = "0.24"
ndarray            = "0.16"
scip               = "0.7"
protobuf           = "3"
xxhash-rust        = { version = "0.8", features = ["xxh3"] }
base64             = "0.22"
fastembed          = { version = "5", default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries"] }
ort        = { version = "2.0.0-rc.10", optional = true }
tokenizers = { version = "0.21",        optional = true, default-features = false, features = ["onig"] }

[features]
default = []
ner     = ["dep:ort", "dep:tokenizers"]

[dev-dependencies]
tempfile       = "3"
tower          = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[patch.crates-io]
trusty-common    = { path = "../trusty-common/crates/trusty-common" }
trusty-symgraph  = { path = "../trusty-common/crates/trusty-symgraph" }
