[package]
name = "trusty-analyzer-core"
version = "0.1.0"
edition = "2021"
description = "Code analysis primitives: complexity, smells, blame, facts, concept clustering"
license = "MIT"

[dependencies]
trusty-common = { path = "../trusty-common" }
trusty-analyzer-lang = { path = "../trusty-analyzer-lang" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
redb = { workspace = true }
tokio = { workspace = true }

# tree-sitter for AST-backed complexity analysis
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"

# ndarray for k-means concept clustering vector math
ndarray = "0.16"

[dev-dependencies]
tempfile = "3"
