[package]
name = "trusty-analyzer-core"
version = "0.1.0"
edition = "2021"
description = "Code analysis primitives: complexity, smells, blame, facts, concept clustering"
license = "MIT"

[dependencies]
trusty-analyzer-types = { path = "../trusty-analyzer-types" }
trusty-analyzer-lang = { path = "../trusty-analyzer-lang" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
redb = { workspace = true }
tokio = { workspace = true }

# tree-sitter for AST-backed complexity analysis
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"

# ndarray for k-means concept clustering vector math
ndarray = "0.16"

# SCIP (Scalable and Precise Index for Code) protobuf bindings used to ingest
# precise symbol indexes produced by external indexers (rust-analyzer, scip-typescript, etc.)
scip = "0.7"
protobuf = "3"

# Stable hash for FactRecord.id. DefaultHasher is not stable across Rust
# toolchain versions, which silently invalidates persisted redb entries
# after compiler upgrades. xxh3 is fast and explicitly versioned.
# See issue bobmatnyc/trusty-search#64.
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Optional dependencies for `ner` feature (ONNX-based named entity recognition
# over doc comments). When the feature is disabled the deps aren't compiled.
ort = { version = "2.0.0-rc.10", optional = true }
tokenizers = { version = "0.21", optional = true, default-features = false, features = ["onig"] }

[features]
default = []
ner = ["dep:ort", "dep:tokenizers"]

[dev-dependencies]
tempfile = "3"
