[package]
name = "trusty-analyzer-lang"
version = "0.1.0"
edition = "2021"
description = "Language-specific static analysis adapters for trusty-analyzer"
license = "MIT"

[dependencies]
trusty-common = { path = "../trusty-common" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

# tree-sitter core
tree-sitter = "0.24"

# language grammars (0.23.x line is compatible with tree-sitter 0.24)
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-java = "0.23"
tree-sitter-go = "0.23"

[dev-dependencies]
