[package]
name = "trusty-analyzer-lang"
version = "0.1.0"
edition = "2021"
description = "Language-specific static analysis adapters for trusty-analyzer"
license = "MIT"

[dependencies]
trusty-common = { path = "../trusty-common" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

# tree-sitter core
tree-sitter = "0.24"

# language grammars (0.23.x line is compatible with tree-sitter 0.24)
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-java = "0.23"
tree-sitter-go = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "=0.23.1"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-swift = "=0.7.0"
tree-sitter-scala = "0.24"

[dev-dependencies]
