[package]
name = "trusty-analyzer-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
description = "MCP stdio server for trusty-analyzer tools"
keywords = ["mcp", "code-analysis", "claude", "json-rpc"]
categories = ["development-tools"]

[dependencies]
trusty-analyzer-types = { path = "../trusty-analyzer-types", version = "0.1.0" }
trusty-analyzer-core = { path = "../trusty-analyzer-core", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
base64 = "0.22"
axum = { workspace = true }
futures-util = "0.3"
