[package]
name = "trusty-analyzer-service"
version = "0.1.0"
edition = "2021"
description = "HTTP sidecar daemon for trusty-analyzer"
license = "MIT"

[dependencies]
trusty-common = { path = "../trusty-common" }
trusty-analyzer-core = { path = "../trusty-analyzer-core" }
trusty-analyzer-lang = { path = "../trusty-analyzer-lang" }
trusty-embedder = { path = "../trusty-embedder" }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
scip = "0.7"
protobuf = "3"
