[package]
name = "trusty-analyzer-service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
description = "HTTP sidecar daemon for trusty-analyzer: axum service exposing analysis endpoints"
keywords = ["code-analysis", "axum", "http", "daemon", "trusty"]
categories = ["development-tools", "web-programming::http-server"]

[dependencies]
trusty-analyzer-types = { path = "../trusty-analyzer-types", version = "0.1.0" }
# Shared trusty-common (port binding, daemon addr file). Sourced via
# the workspace dep and overridden to a local path via [patch.crates-io].
trusty-common = { workspace = true, features = ["axum-server"] }
trusty-analyzer-core = { path = "../trusty-analyzer-core", version = "0.1.0" }
trusty-analyzer-lang = { path = "../trusty-analyzer-lang", version = "0.1.0" }
trusty-analyzer-embedder = { path = "../trusty-embedder", version = "0.1.0" }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
include_dir = { workspace = true }
mime_guess = { workspace = true }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
scip = "0.7"
protobuf = "3"
