[package]
name = "trusty-analyzer-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
description = "Analyzer-specific shared types (CodeChunk, KgGraph, FactRecord) for trusty-analyzer"
keywords = ["code-analysis", "types", "complexity", "static-analysis"]
categories = ["development-tools"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
trusty-contracts = { workspace = true }
