[package]
name = "trusty-analyzer-embedder"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
description = "Embedding backends for trusty-analyzer: fastembed neural + BOW fallback"
keywords = ["embeddings", "vector", "bow", "fastembed", "code-analysis"]
categories = ["science", "development-tools"]

[dependencies]
trusty-analyzer-core = { path = "../trusty-analyzer-core", version = "0.1.1" }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
fastembed = { version = "5", default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries"] }
